identity: Don't leak the invocation when handling SignIn

https://bugzilla.gnome.org/show_bug.cgi?id=756431